--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --color-foreground: var(--foreground);
   --color-card: var(--card);
   --color-card-foreground: var(--card-foreground);
+  --color-card-create: var(--card-create);
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
@@ -48,12 +49,14 @@
   --foreground: #0a0a0a;
   --card: #ffffff;
   --card-foreground: #0a0a0a;
+  --card-create: #f5f5f5;
   --popover: #ffffff;
   --popover-foreground: #0a0a0a;
   --primary: #171717;
   --primary-foreground: #fafafa;
   --secondary: #f5f5f5;
   --secondary-foreground: #171717;
+  --third: #22C55E;
   --muted: #f5f5f5;
   --muted-foreground: #737373;
   --accent: #f5f5f5;
@@ -82,12 +85,14 @@
   --foreground: #fafafa;
   --card: #171717;
   --card-foreground: #fafafa;
+  --card-create: #2f2f2f;
   --popover: #171717;
   --popover-foreground: #fafafa;
   --primary: #e5e5e5;
   --primary-foreground: #171717;
   --secondary: #262626;
   --secondary-foreground: #fafafa;
+  --third: #22C55E;
   --muted: #262626;
   --muted-foreground: #a1a1a1;
   --accent: #262626;
@@ -115,6 +120,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
