--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
+  --color-third: var(--third);
+  --color-third-foreground: var(--third-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
   --color-accent: var(--accent);
@@ -57,6 +59,7 @@
   --secondary: #f5f5f5;
   --secondary-foreground: #171717;
   --third: #22C55E;
+  --thrid-foreground:#000000;
   --muted: #f5f5f5;
   --muted-foreground: #737373;
   --accent: #f5f5f5;
