--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -9,6 +8,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --hover-button: var(--hover-button);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -43,12 +43,14 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-separator-post: var(--separator-post);
 }
 
 :root {
   --radius: 0.625rem;
-  --background: #EEEEEE;
+  --background: #eeeeee;
   --foreground: #0a0a0a;
+  --hover-button: #000000;
   --card: #ffffff;
   --card-foreground: #0a0a0a;
   --card-create: #f5f5f5;
@@ -58,14 +60,15 @@
   --primary-foreground: #fafafa;
   --secondary: #f5f5f5;
   --secondary-foreground: #171717;
-  --third: #22C55E;
-  --thrid-foreground:#000000;
+  --third: #22c55e;
+  --thrid-foreground: #000000;
   --muted: #f5f5f5;
   --muted-foreground: #737373;
   --accent: #f5f5f5;
   --accent-foreground: #171717;
   --destructive: #e7000b;
   --border: #e5e5e5;
+  --separator-post: #848484;
   --input: #e5e5e5;
   --ring: #a1a1a1;
   --chart-1: #f54900;
@@ -86,37 +89,39 @@
 .dark {
   --background: #0a0a0a;
   --foreground: #fafafa;
+  --hover-button: #000000;
   --card: #171717;
   --card-foreground: #fafafa;
-  --card-create: #2f2f2f;
+  --card-create: #171717;
   --popover: #171717;
   --popover-foreground: #fafafa;
   --primary: #e5e5e5;
   --primary-foreground: #171717;
   --secondary: #262626;
   --secondary-foreground: #fafafa;
-  --third: #22C55E;
+  --third: #22c55e;
   --muted: #262626;
   --muted-foreground: #a1a1a1;
   --accent: #262626;
   --accent-foreground: #fafafa;
   --destructive: #22c55e;
   --border: #ffffff1a;
+  --separator-post: #848484;
   --input: #ffffff26;
   --ring: #737373;
   --chart-1: #1447e6;
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --chart-2: #00bc7d;
+  --chart-3: #fe9a00;
+  --chart-4: #ad46ff;
+  --chart-5: #ff2056;
+  --sidebar: #171717;
+  --sidebar-foreground: #fafafa;
+  --sidebar-primary: #1447e6;
+  --sidebar-primary-foreground: #fafafa;
+  --sidebar-accent: #262626;
+  --sidebar-accent-foreground: #fafafa;
+  --sidebar-border: #ffffff1a;
+  --sidebar-ring: #737373;
 }
 
 @layer base {
