fix: ajustando cores do login e home

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: #eeeeee;
+  --background: #EEEEEE;
   --foreground: #0a0a0a;
   --hover-button: #000000;
   --card: #ffffff;
