--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,19 @@
   --sidebar-ring: #737373;
 }
 
+html::-webkit-scrollbar {
+  width: 8px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--third);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: var(--third-hover);
+}
+
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
 }
@@ -135,15 +148,12 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: hsl(var(--muted-foreground) / 0.5);
-  border-radius: 10px;
   border: 2px solid transparent;
-  background-clip: content-box;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: hsl(var(--muted-foreground) / 0.8);
-}
+
+
+
 
 @layer base {
   * {
