--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ html::-webkit-scrollbar-thumb:hover {
   background-color: var(--third-hover);
 }
 
+/* scrollbar invisvel */
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
 }
@@ -150,6 +151,24 @@ html::-webkit-scrollbar-thumb:hover {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   border: 2px solid transparent;
+}
+
+/* scrollbar verde */
+.scrollbar-thumb::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollbar-thumb::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollbar-thumb::-webkit-scrollbar-thumb {
+  background-color: var(--third);
+  border-radius: 10px;
+}
+
+.scrollbar-thumb::-webkit-scrollbar-thumb:hover {
+  background-color: var(--third-hover);
 }
 
 @layer base {
